--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
 <body>
     <nav>
 
-        <a href="./index.html"><i class="fa fa-car black-text"></i> Home</a>
+        <a href="./index.html"><i class="fa fa-home black-text"></i> Home</a>
 
-        <a href="./contact.html"><i class="fa fa-car black-text"></i> Contact</a>
+        <a href="./contact.html"><i class="fa fa-phone black-text"></i> Contact</a>
 
     </nav>
 
