--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 
     <h1 class="black-text">Contact Page</h1>
 
-    <p>Email: rjhut1@ocdsb.ca</p>
+    <p>Email: ramneetjhutty135@gmail.com</p>
 
     <img src="./panda.webp" width="100%" alt="photo">
 
